src/objects/Opportunity.object
<CustomObject>
    <businessProcesses>
        <fullName>Enterprise Sales Process</fullName>
        <isActive>true</isActive>
        <values>
            <fullName>0-Revisit</fullName>
        </values>
        <values>
            <fullName>1-Qualified</fullName>
        </values>
        <values>
            <fullName>2-Decision Maker Engaged</fullName>
        </values>
        <values>
            <fullName>3-Negotiation %26 Close</fullName>
        </values>
        <values>
            <fullName>4-Closed Won</fullName>
        </values>
    </businessProcesses>
    <businessProcesses>
        <fullName>Merchant Sales Process</fullName>
        <isActive>true</isActive>
        <values>
            <fullName>0-Revisit</fullName>
        </values>
        <values>
            <fullName>1-Qualified</fullName>
        </values>
        <values>
            <fullName>2-Decision Maker Engaged</fullName>
        </values>
        <values>
            <fullName>3-Negotiation %26 Close</fullName>
        </values>
        <values>
            <fullName>4-Closed Won</fullName>
        </values>
    </businessProcesses>
    <businessProcesses>
        <fullName>Organization Sales Process</fullName>
        <isActive>true</isActive>
        <values>
            <fullName>0-Revisit</fullName>
        </values>
        <values>
            <fullName>1-Qualified</fullName>
        </values>
        <values>
            <fullName>2-Decision Maker Engaged</fullName>
        </values>
        <values>
            <fullName>3-Negotiation %26 Close</fullName>
        </values>
        <values>
            <fullName>4-Closed Won</fullName>
        </values>
    </businessProcesses>
    <fields>
        <fullName>Average_Ticket_Size__c</fullName>
        <label>Average POS Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Blog_Site__c</fullName>
        <label>Blog Site</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Circular_Ads__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Circular Ads</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>City__c</fullName>
        <label>City</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Community_from_Zoho__c</fullName>
        <label>Community from Zoho</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Competitors_Used__c</fullName>
        <label>Competitors Used</label>
        <picklist>
            <picklistValues>
                <fullName>Groupon</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>LivingSocial</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Five Star</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Level Up</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MOGL</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Shopkick</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SpotOn</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Belly</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Consumer_Contests__c</fullName>
        <defaultValue>false</defaultValue>
        <label>In Store Events/Contests</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Contact_Phone__c</fullName>
        <label>Contact Phone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Country__c</fullName>
        <label>Country</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Current_Marketing_Activities__c</fullName>
        <label>Current Marketing Activities</label>
        <picklist>
            <picklistValues>
                <fullName>Circular Ad</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Shared Mail</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Direct Mail</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Radio</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Television</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Online Banner Ads</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Direct_Mail__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Direct Mail</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Discover_SMR__c</fullName>
        <label>Discover SMR</label>
        <picklist>
            <picklistValues>
                <fullName>Agata Kaufman</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Amy Schneider</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Beth Mintz</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Caroline Marino</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Dave Kmiec</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Diana Lopez</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Donna Pagnutti</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Greg Bauske</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Jeanette Andino</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Jennifer Moreland</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Kathleen Nafziger</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Michael Canady</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Misty Novich</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Pat Reed</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Pia Feliciano</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Scott Deluga</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Stephen Rigopoulous</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Teri Owens</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Todd Douthat</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Email_Database_Size__c</fullName>
        <defaultValue>0</defaultValue>
        <description>Number of email addresses merchant has in its database.</description>
        <label>Email Database Size</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Email_Frequency__c</fullName>
        <description>How often is client emailing their database?</description>
        <label>Email Frequency</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Email_Solution_Program__c</fullName>
        <label>Email Solution/Program</label>
        <picklist>
            <picklistValues>
                <fullName>Mail Chimp</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Constant Contact</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Vertical Response</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SendGrid</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Emails_Newsletters__c</fullName>
        <label>Emails/Newsletters</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Enterprise_Category__c</fullName>
        <label>Enterprise Category</label>
        <picklist>
            <picklistValues>
                <fullName>Advertising Platform</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Affiliate Network</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Deal Co</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Employee Incentives/Payroll</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Government Programs</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Issuer</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Malls/Shopping Centers</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Membership Organization</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Network</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Processor</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Program Manager</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Social Networks</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Estimated_Initial_Fee__c</fullName>
        <label>Estimated Initial Fee</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Existing_Business__c</fullName>
        <label>Existing Marqeta Partner</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Facebook_Page__c</fullName>
        <label>Facebook Page</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Franchise__c</fullName>
        <label>Franchise</label>
        <picklist>
            <picklistValues>
                <fullName>YES</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>NO</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Georgraphy__c</fullName>
        <label>Georgraphy</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Ignition_Market__c</fullName>
        <label>Ignition Market</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Industry__c</fullName>
        <label>Industry</label>
        <picklist>
            <picklistValues>
                <fullName>Specialty</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Grocery</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Dining</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Services</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Apparel</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Big Box Retail</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Health &amp; Beauty</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Attractions</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Convenience</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Home &amp; Garden</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Pets</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Drug Store</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Travel</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Nonprofit</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Online Retailers</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Kids</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Automotive</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>HOME</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Affinity</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Electronics</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Dry Cleaners</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CLOSEOUT</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Retail</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>eCommerce</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Entertainment</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>APPAREL &amp; ACCESSORIES</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>OFFICE</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MASS MERCHANTS/SUPERCENTERS</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Marketing_Budget_Term__c</fullName>
        <label>Marketing Budget Term</label>
        <picklist>
            <picklistValues>
                <fullName>Annual</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Monthly</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Quarterly</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Marketing_Budget__c</fullName>
        <label>Marketing Budget</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Marketing_Notes_from_Zoho__c</fullName>
        <label>Marketing Notes from Zoho</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>No_of_Locations__c</fullName>
        <label>No. of Locations</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Overall_Sales_Duration__c</fullName>
        <label>Overall Sales Duration</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Partner_Type__c</fullName>
        <label>Partner Type</label>
        <picklist>
            <picklistValues>
                <fullName>Payments Partner</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Commerce partner</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Corporate Partner</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Potential_ID__c</fullName>
        <label>Potential ID</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Potential_Owner_Id__c</fullName>
        <label>Potential Owner Id</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Programs_Participating_In__c</fullName>
        <label>Programs Participating In</label>
        <picklist>
            <picklistValues>
                <fullName>Core</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>AAA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Discover</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>GoWallet</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Enterprise Solution</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Radio_Ads__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Radio Ads</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Regularly_Posts_to_FB__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Regularly Posts to FB</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Regularly_Tweets__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Regularly Tweets</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Sales_Cycle_Duration__c</fullName>
        <label>Sales Cycle Duration</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Shared_Mail__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Shared Mail</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>State__c</fullName>
        <label>State</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Street__c</fullName>
        <label>Street</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Sub_Type__c</fullName>
        <label>Sub Type</label>
        <picklist>
            <controllingField>Type__c</controllingField>
            <picklistValues>
                <fullName>National (&gt;$1B Annual Revenue)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Regional (&gt;$20M Annual Revenue)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Local</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Target_Demographics__c</fullName>
        <label>Target Demographics</label>
        <picklist>
            <picklistValues>
                <fullName>Male</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Female</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Age: 18-24</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Age: 25-34</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Age: 35-49</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Age: 50-64</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Age: 65+</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Household Income: $0-$24,999</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Household Income: $25k-$49,999</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Household Income: $50k-$74,999</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Household Income: $75k-$99,999</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Household Income: $100k-$124,999</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Household Income: $125k-$149,999</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Household Income: $150,000+</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Young Families</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Retirees</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Professionals/Singles</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Students</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>All</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Business Professional</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Mom</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Television_Ads__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Television Ads</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Twitter_Handle__c</fullName>
        <label>Twitter Handle</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Type__c</fullName>
        <label>Type</label>
        <picklist>
            <picklistValues>
                <fullName>Merchant</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Enterprise Partner</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Organization</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Website__c</fullName>
        <label>Website</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Zip_Code__c</fullName>
        <label>Zip Code</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>category_c__c</fullName>
        <label>Category</label>
        <picklist>
            <picklistValues>
                <fullName>Apparel</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Attractions / Entertainment</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Automotive</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Big Box Retail</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Convenience</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Dining</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Drug Store</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Dry Cleaners</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Electronics</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Gas</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Grocery</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Health &amp; Beauty</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Home &amp; Garden</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Kids</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Nonprofit</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Online Retailers</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Pets</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Services</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Specialty</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Travel</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Enterprise Partner</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>of_Users_Customers__c</fullName>
        <label># of Users/Customers</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <listViews>
        <fullName>AllOpportunities</fullName>
        <filterScope>Everything</filterScope>
        <label>All Opportunities</label>
    </listViews>
    <listViews>
        <fullName>Christina_T_Opportunities_Open</fullName>
        <columns>OPPORTUNITY.NAME</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>OPPORTUNITY.AMOUNT</columns>
        <columns>OPPORTUNITY.CLOSE_DATE</columns>
        <columns>OPPORTUNITY.STAGE_NAME</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CORE.USERS.ALIAS</field>
            <operation>equals</operation>
            <value>cturk</value>
        </filters>
        <filters>
            <field>OPPORTUNITY.STAGE_NAME</field>
            <operation>equals</operation>
            <value>0-Revisit,1-Qualified,2-Decision Maker Engaged,3-Negotiation &amp; Close</value>
        </filters>
        <label>Christina T Opportunities Open</label>
    </listViews>
    <listViews>
        <fullName>Christina_T_Opportunities_Won</fullName>
        <columns>OPPORTUNITY.NAME</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>OPPORTUNITY.AMOUNT</columns>
        <columns>OPPORTUNITY.CLOSE_DATE</columns>
        <columns>OPPORTUNITY.STAGE_NAME</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CORE.USERS.ALIAS</field>
            <operation>equals</operation>
            <value>cturk</value>
        </filters>
        <filters>
            <field>OPPORTUNITY.STAGE_NAME</field>
            <operation>equals</operation>
            <value>4-Closed Won</value>
        </filters>
        <label>Christina T Opportunities Won</label>
    </listViews>
    <listViews>
        <fullName>ClosingNextMonth</fullName>
        <filterScope>Everything</filterScope>
        <filters>
            <field>OPPORTUNITY.CLOSED</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <filters>
            <field>OPPORTUNITY.CLOSE_DATE</field>
            <operation>equals</operation>
            <value>NEXT_MONTH</value>
        </filters>
        <label>Closing Next Month</label>
    </listViews>
    <listViews>
        <fullName>ClosingThisMonth</fullName>
        <filterScope>Everything</filterScope>
        <filters>
            <field>OPPORTUNITY.CLOSED</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <filters>
            <field>OPPORTUNITY.CLOSE_DATE</field>
            <operation>equals</operation>
            <value>THIS_MONTH</value>
        </filters>
        <label>Closing This Month</label>
    </listViews>
    <listViews>
        <fullName>Mari_B_Opportunities_Closed</fullName>
        <columns>OPPORTUNITY.NAME</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>OPPORTUNITY.AMOUNT</columns>
        <columns>OPPORTUNITY.CLOSE_DATE</columns>
        <columns>OPPORTUNITY.STAGE_NAME</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CORE.USERS.ALIAS</field>
            <operation>equals</operation>
            <value>mbent</value>
        </filters>
        <filters>
            <field>OPPORTUNITY.STAGE_NAME</field>
            <operation>equals</operation>
            <value>4-Closed Won</value>
        </filters>
        <label>Mari B Opportunities Won</label>
    </listViews>
    <listViews>
        <fullName>Mari_B_Opportunities_Open</fullName>
        <columns>OPPORTUNITY.NAME</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>OPPORTUNITY.AMOUNT</columns>
        <columns>OPPORTUNITY.CLOSE_DATE</columns>
        <columns>OPPORTUNITY.STAGE_NAME</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CORE.USERS.ALIAS</field>
            <operation>equals</operation>
            <value>mbent</value>
        </filters>
        <filters>
            <field>OPPORTUNITY.STAGE_NAME</field>
            <operation>equals</operation>
            <value>0-Revisit,1-Qualified,2-Decision Maker Engaged,3-Negotiation &amp; Close</value>
        </filters>
        <label>Mari B Opportunities Open</label>
    </listViews>
    <listViews>
        <fullName>Mark_P_Opportunities_Open</fullName>
        <columns>OPPORTUNITY.NAME</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>OPPORTUNITY.AMOUNT</columns>
        <columns>OPPORTUNITY.CLOSE_DATE</columns>
        <columns>OPPORTUNITY.STAGE_NAME</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CORE.USERS.ALIAS</field>
            <operation>equals</operation>
            <value>mprus</value>
        </filters>
        <filters>
            <field>OPPORTUNITY.STAGE_NAME</field>
            <operation>equals</operation>
            <value>0-Revisit,1-Qualified,2-Decision Maker Engaged,3-Negotiation &amp; Close</value>
        </filters>
        <label>Mark P Opportunities Open</label>
    </listViews>
    <listViews>
        <fullName>Mark_P_Opportunities_Won</fullName>
        <columns>OPPORTUNITY.NAME</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>OPPORTUNITY.AMOUNT</columns>
        <columns>OPPORTUNITY.CLOSE_DATE</columns>
        <columns>OPPORTUNITY.STAGE_NAME</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CORE.USERS.ALIAS</field>
            <operation>equals</operation>
            <value>mprus</value>
        </filters>
        <filters>
            <field>OPPORTUNITY.STAGE_NAME</field>
            <operation>equals</operation>
            <value>4-Closed Won</value>
        </filters>
        <label>Mark P Opportunities Won</label>
    </listViews>
    <listViews>
        <fullName>MyOpportunities</fullName>
        <filterScope>Mine</filterScope>
        <label>My Opportunities</label>
    </listViews>
    <listViews>
        <fullName>NewThisWeek</fullName>
        <filterScope>Everything</filterScope>
        <filters>
            <field>OPPORTUNITY.CREATED_DATE</field>
            <operation>equals</operation>
            <value>THIS_WEEK</value>
        </filters>
        <label>New This Week</label>
    </listViews>
    <listViews>
        <fullName>Omri_D_Opportunities_Won</fullName>
        <columns>OPPORTUNITY.NAME</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>OPPORTUNITY.AMOUNT</columns>
        <columns>OPPORTUNITY.CLOSE_DATE</columns>
        <columns>OPPORTUNITY.STAGE_NAME</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CORE.USERS.ALIAS</field>
            <operation>equals</operation>
            <value>odaha</value>
        </filters>
        <filters>
            <field>OPPORTUNITY.STAGE_NAME</field>
            <operation>equals</operation>
            <value>4-Closed Won</value>
        </filters>
        <label>Omri D Opportunities Won</label>
    </listViews>
    <listViews>
        <fullName>Omri_Opportunities_Open</fullName>
        <columns>OPPORTUNITY.NAME</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>Estimated_Initial_Fee__c</columns>
        <columns>OPPORTUNITY.CLOSE_DATE</columns>
        <columns>OPPORTUNITY.STAGE_NAME</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CORE.USERS.ALIAS</field>
            <operation>equals</operation>
            <value>odaha</value>
        </filters>
        <filters>
            <field>OPPORTUNITY.STAGE_NAME</field>
            <operation>equals</operation>
            <value>0-Revisit,1-Qualified,2-Decision Maker Engaged,3-Negotiation &amp; Close</value>
        </filters>
        <label>Omri Opportunities Open</label>
    </listViews>
    <listViews>
        <fullName>Vic_T_Opportunities_Open</fullName>
        <columns>OPPORTUNITY.NAME</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>OPPORTUNITY.AMOUNT</columns>
        <columns>OPPORTUNITY.CLOSE_DATE</columns>
        <columns>OPPORTUNITY.STAGE_NAME</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CORE.USERS.ALIAS</field>
            <operation>equals</operation>
            <value>vtort</value>
        </filters>
        <filters>
            <field>OPPORTUNITY.STAGE_NAME</field>
            <operation>equals</operation>
            <value>0-Revisit,1-Qualified,2-Decision Maker Engaged,3-Negotiation &amp; Close</value>
        </filters>
        <label>Vic T Opportunities Open</label>
    </listViews>
</CustomObject>